2003-09-18  Rodrigo Moya <rodrigo@ximian.com>

	* cal-client/cal-client.[ch] (cal_client_add_timezone): new function.

2003-09-18  Rodrigo Moya <rodrigo@ximian.com>

	* idl/evolution-calendar.idl: added 'notifyTimezoneAdded' method
	to the Calendar::Listener interface.

	* pcs/cal-backend-sync.[ch] (cal_backend_sync_add_timezone):
	(_cal_backend_add_timezone): new functions for the new virtual
	method implementation.

	* pcs/cal.[ch] (cal_notify_timezone_added): new function.

	* pcs/cal-backend-file.c (cal_backend_add_timezone): converted to
	return a CalBackendSyncStatus.
	(cal_backend_file_class_init): the 'add_timezone' method we implement
	is the one in the CalBackendSync class.
	(cancel_receive_object): added missing 'return'.
	(free_cal_component): removed unused function.

2003-09-17  Rodrigo Moya <rodrigo@ximian.com>

	* pcs/cal-backend-file.c (cal_backend_add_timezone): added new
	virtual method implementation.

	* pcs/cal.c (impl_Cal_addTimezone): check return value from
	cal_backend_add_timezone, and set an exception if an error is
	returned.

2003-09-16  Rodrigo Moya <rodrigo@ximian.com>

	* idl/evolution-calendar.idl: added addTimezone method.

	* pcs/cal.c (impl_Cal_addTimezone): implemented new method.
	(cal_class_init): set new method on the epv.

	* pcs/cal-backend.[ch]: added 'add_timezone' virtual method.
	(cal_backend_add_timezone): implemented new virtual method.

	* pcs/cal-backend-file.c (cal_backend_file_modify_object): it's
	cal_component_get_as_string, not cal_component_as_string.

	* cal-client/cal-client.c (cal_client_ensure_timezone_on_server):
	dont use anymore updateObjects method, use addTimezone instead.

2003-09-15  Rodrigo Moya <rodrigo@ximian.com>

	* pcs/cal-backend-file.c (cal_backend_file_create_object): return
	the UID of the added object.
	(cal_backend_file_remove_object): ditto for old_object.

2003-09-15    <jpr@ximian.com>

	* conduits/todo/todo-conduit.c (replace_record): switch to modify
	object